# cmake

./: .gitignore  CMakeLists.txt
HELLOWORLD/: README.md
HELLOWORLD/exam1/: CMakeLists.txt  README  runhello.sh
HELLOWORLD/exam1/src/: main.c
HELLOWORLD/exam2/: .CMakeLists.txt.swp  .run.sh.swp  CMakeLists.txt  run.sh
HELLOWORLD/exam2/install/include/: hello.h
HELLOWORLD/exam2/install/lib/cmake/hello/: hello-config-noconfig.cmake  hello-config.cmake
HELLOWORLD/exam2/src/: hello.c  main.c
HELLOWORLD/exam3/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  run.sh
HELLOWORLD/exam4/: CMakeLists.txt  README.md  run.sh
HELLOWORLD/exam5/: CMakeLists.txt  README.md  run.sh
HELLOWORLD/exam5/cmake/: .FindHELLO.cmake.swp  FindHELLO.cmake
HELLOWORLD/exam5/src/: main.c
MathFunctions/: CMakeLists.txt
cmake_tutories/: CMakeLists.txt  README.md
devel/: Tutorial
test/: CMakeLists.txt  README.md
test/include/: demoConfig.h  demoConfig.h.in  mymath.h
test/src/: main.cxx  mysqrt.cxx
