CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(demo)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
# LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/bin)
ADD_LIBRARY(mysqrt SHARED src/mysqrt.cxx)
ADD_EXECUTABLE(main src/main.cxx)
TARGET_LINK_LIBRARIES(main mysqrt)

