cmake_minimum_required(VERSION 2.8.3)
PROJeCT(HELLO)

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(hello src/main.c)

INSTALL(FILES COPYRIGHT README 
  DESTINATION share/doc)
INSTALL(DIRECTORY doc 
  DESTINATION share)
INSTALL(TARGETS hello
  RUNTIME DESTINATION bin)

